--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       
     <title>Programs</title>
 
-    <h1 align="center">TI-Nspire CX Programs</h1>
+    <h1 align="center">TI-Nspire Programs</h1>
     <p class="centered" align="center">Made by Nick Masi<br /><br /><br /><br /></p>
     
       <style>
