--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       
       <table border="5" class="table" ALIGN="left">
           <tr>
-              <th title="Ayy">AP Statistics:</th>
+              <th>AP Statistics:</th>
               <th>Physics:</th>
               <th>Math 2:</th>
           </tr>
