--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
   gtag('config', 'UA-117365412-1');
 </script>
       
-    <title>Programs</title>
+    <title>TI Programs</title>
 
     <h1 align="center">TI-Nspire Programs</h1>
     <p class="centered" align="center">Made by Nick Masi<br /><br /><br /><br /></p>
