refactor: image sizes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="row">
                 <div class="col text-end">
-                    <img src="images/DSC_4301_Original.jpg" class="rounded float-left mr-3" width="300" height="300"/>
+                    <img src="images/DSC_4301_Original.jpg" class="rounded float-left mr-3""/>
                 </div>
                 <div class="col text-start">
                     <h1>Nick Masi</h1>
@@ -57,8 +57,13 @@
             <p>Department of Computer Science, Brown University</p>
             <p>Watson Institute for International & Public Affairs, Brown University</p>
             <p>Serre Lab</p>
+            <h3>Leadership</h3>
+            <p>WBRU</p>
+            <p>CCB</p>
             <h3>Awards</h3>
             <p>Eagle Scout</p>
+            <!-- <h3>Interests</h3>
+            <p>Running, Sewing, Paddle Sports, Billiards</p> -->
         </div>
     </main>
   </body>
