--- a/visual.html
+++ b/visual.html
@@ -27,9 +27,9 @@
     <main class="flex-shrink-0" role="main">
         <div class="container">
             <h1>Visual Projects</h1>
-            <img src="images/Providence_Carfree.png" class="rounded float-left mr-3" width="457" height="600">
+            <img src="images/Providence_Carfree.png" class="rounded float-left mr-3 visual">
             <br/>
-            <img src="images/Providence_Streets-01.png" class="rounded float-left mr-3" width="457" height="473">
+            <img src="images/Providence_Streets-01.png" class="rounded float-left mr-3 visual">
         </div>
     </main>
   </body>
