--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 
     <main class="flex-shrink-0" role="main">
         <div class="container">
-            <!-- <div class="d-flex flex-row"> -->
             <div class="row g-0">
                 <div class="col-12 col-md-6">
                     <img src="images/DSC_4301_g.jpg" class="rounded mr-3 float-left header-image"/>
@@ -58,15 +57,53 @@
                 <ul class="timeline">
                     <li class="timeline-item">
                         <div class="timeline-item-content">
+                            <h5>Teaching Assistant, Computational Linguistics (CS 1460)</h5>
+                            <h6>Department of Computer Science, Brown University</h6>
+                            <p>
+                                <ul>
+                                    <li>Cover modern methods in NLP and DL: transformers, LLMs, machine translation, topic modeling, fine-tuning, dependency parsing, etc.</li>
+                                    <li>Refine course assignments, grade assignments, and hold office hours</li>
+                                </ul>
+                            </p>
+                            <p><small class="text-muted">August 2024 — Present</small></p>
+                        </div>
+                    </li>
+                    <li class="timeline-item">
+                        <div class="timeline-item-content">
                             <h5>Software Engineer Intern</h5>
                             <h6>MathWorks</h6>
                             <p>
                                 <ul>
                                     <li>Automated a core company development workflow that was previously facilitated manually through help tickets</li>
-                                    <li>Full stack development in Golang, SQL, Bash, & React; wrote unit tests and documentation</li>
+                                    <li>Full stack development in Golang, SQL, Bash, & React</li>
                                 </ul>
                             </p>
-                            <p><small class="text-muted">May 2024 — August 2024</small></p>
+                            <p><small class="text-muted">June 2024 — August 2024</small></p>
+                        </div>
+                    </li>
+                    <li class="timeline-item">
+                        <div class="timeline-item-content">
+                            <h5>Teaching Assistant, Fairness in Automated Decision Making (CS 1951Z)</h5>
+                            <h6>Department of Computer Science, Brown University</h6>
+                            <p>
+                                <ul>
+                                    <li>Create and grade course assignments on measuring & mathematically mitigating bias in machine learning models as well as explainability and interpretability techniques (e.g., LIME, SHAP)</li>
+                                </ul>
+                            </p>
+                            <p><small class="text-muted">January 2024 — May 2024</small></p>
+                        </div>
+                    </li>
+                    <li class="timeline-item">
+                        <div class="timeline-item-content">
+                            <h5>Teaching Assistant, Computational Linguistics (CS 1460)</h5>
+                            <h6>Department of Computer Science, Brown University</h6>
+                            <p>
+                                <ul>
+                                    <li>Wrote lectures and led discussion sections that put the technical aspects of computational linguistics & natural language processing in conversation with their societal context and impact to promote socially conscious computing practices</li>
+                                    <li>Topics discussed: governance & regulation of AI, financial hype cycles in tech, prompt injection, disinformation, LLMs in education</li>
+                                </ul>
+                            </p>
+                            <p><small class="text-muted">August 2023 — December 2023</small></p>
                         </div>
                     </li>
                     <li class="timeline-item">
@@ -75,35 +112,115 @@
                             <h6>MathWorks</h6>
                             <p>
                                 <ul>
+                                    <li>Added <a href="https://www.mathworks.com/help/releases/R2024a/signal/release-notes.html#mw_88295c50-17a5-4688-8814-f6e50ba8672d">Fill Missing</a> to the Signal Analyzer App in MATLAB which allows users to preprocess signals that are missing data</li>
                                     <li>Managed cross-team development and communication between the Simulink CI/CD and System Architecture Modeling teams to lead the creation of new graphical capabilities for the <em>CI/CD Automation for Simulink Check</em> extension in Simulink</li>
                                 </ul>
                             </p>
-                            <p><small class="text-muted">May 2023 – August 2023</small></p>
+                            <p><small class="text-muted">March 2023 — August 2023</small></p>
                         </div>
                     </li>
                     <li class="timeline-item">
                         <div class="timeline-item-content">
-                            <h5>Job Title 2</h5>
-                            <h6>Company Name</h6>
-                            <p>Description of the job, responsibilities, and achievements.</p>
-                            <p><small class="text-muted">Dates of Employment</small></p>
+                            <h5>Research Analyst Intern</h5>
+                            <h6>Emerging Technologies Institute</h6>
+                            <p>
+                                <ul>
+                                    <li>Wrote python scripts to collect and preprocess all publicly available federal defense spending records for RDT&E</li>
+                                    <li>Created a desktop application to graph and analyze this data; worked with public policy analysts to tailor my app for their research</li>
+                                </ul>
+                            </p>
+                            <p><small class="text-muted">January 2023 — April 2023</small></p>
                         </div>
                     </li>
-                    <!-- Add more work experiences as needed -->
+                    <li class="timeline-item">
+                        <div class="timeline-item-content">
+                            <h5>Software Engineer Intern</h5>
+                            <h6>MathWorks</h6>
+                            <p>
+                                <ul>
+                                    <li>Built a tool to statistically identify the most bug-prone sourcecode files in the company codebase; deployed to all dev teams</li>
+                                    <li>Innovated a novel approach for collecting internal metadata on code by capturing file statistics at the point of development, this replaced scripts that took 9 days to run with custom python Git subcommands that run in seconds</li>
+                                </ul>
+                            </p>
+                            <p><small class="text-muted">May 2022 — August 2022</small></p>
+                        </div>
+                    </li>
+                    <li class="timeline-item">
+                        <div class="timeline-item-content">
+                            <h5>Senior Fellow Liaison</h5>
+                            <h6>Watson Institute for International and Public Affairs, Brown University</h6>
+                            <p>
+                                <ul>
+                                    <li>Manage relationships and communications among Senior Fellows running student study groups, their undergraduate and graduate student participants, and the Watson Institute</li>
+                                    <li>Assist Senior Fellows by selecting weekly readings, gathering group feedback, and organizing group logistics</li>
+                                    <li>Served as a liaison for Senior Fellows Dr. Arun Seraphin in his group on National Security, Innovation, and the Congress and Secretary of Labor Tom Perez in his group on Leadership and Governance in Challenging Times</li>
+                                </ul>
+                            </p>
+                            <p><small class="text-muted">January 2021 — December 2022</small></p>
+                        </div>
+                    </li>
                 </ul>
             </div>
         
-            <h5>MathWorks</h5>
-            <p>Emerging Technologies Institute</p>
-            <p>Department of Computer Science, Brown University</p>
-            <p>Watson Institute for International & Public Affairs, Brown University</p>
-            <p>Serre Lab</p>
-            <h3>Leadership</h3>
-            <p>WBRU</p>
-            <p>Charcuterie Club</p>
-            <p>CCB</p>
-            <h3>Awards</h3>
-            <p>Eagle Scout</p>
+            <h3 class="mb4" style="margin-bottom: 20px;">Leadership</h3>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card work-experience-card">
+                        <div class="card-body">
+                            <h5 class="card-title">Tech Coordinator</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">WBRU (Brown University Radio Station)</h6>
+                            <p class="card-text">
+                                <ul>
+                                    <li>Created processes for DJs to transmit song metadata while live on air to comply with FCC regulations</li>
+                                    <li>Develop and maintain website</li>
+                                </ul>
+                            </p>
+                            <p class="card-text"><small class="text-muted">September 2023 — Present</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card work-experience-card">
+                        <div class="card-body">
+                            <h5 class="card-title">President</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Charcuterie Club</h6>
+                            <p class="card-text">
+                                <ul>
+                                    <li>Run & plan meetings; organize club logistics</li>
+                                </ul>
+                            </p>
+                            <p class="card-text"><small class="text-muted">September 2023 — Present</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card work-experience-card">
+                        <div class="card-body">
+                            <h5 class="card-title">Class Treasurer</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Class Coordinating Board, Brown University</h6>
+                            <p class="card-text">
+                                <ul>
+                                    <li>Elected student government official; managed the class budget</li>
+                                </ul>
+                            </p>
+                            <p class="card-text"><small class="text-muted">January 2021 — September 2021</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <h3 class="mb4" style="margin-bottom: 20px;">Awards</h3>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card work-experience-card">
+                        <div class="card-body">
+                            <h5 class="card-title">Eagle Scout</h5>
+                            <p class="card-text"><small class="text-muted">July 2020</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- <h3>Interests</h3>
             <p>Running, Sewing, Paddle Sports, Billiards</p> -->
         </div>
