feat: coding & visual

--- a/visual.html
+++ b/visual.html
@@ -25,12 +25,38 @@
     </ul>
 
     <main class="flex-shrink-0" role="main">
-        <div class="container">
-            <h1>Visual Projects</h1>
-            <img src="images/Providence_Carfree.png" class="rounded float-left mr-3 visual">
-            <br/>
-            <img src="images/Providence_Streets-01.png" class="rounded float-left mr-3 visual">
-        </div>
+      <div class="container">
+          <h1>Visual Projects</h1>
+
+          <div class="row g-0 visual">
+            <div class="col-12 col-md-6">
+                <img src="images/Providence_Carfree.png" class="mr-3 float-left header-image"/>
+            </div>
+            <div class="col-12 col-md-6 header-text">
+                <p>Created a conceptual plan convert downtown Providence "carfree" by analyzing initiatives of this nature already existing within the city and around the world.</p>
+                <p>This map is a supporting document that is in the style of a <em>Metrominuto</em>, which is a metro-style map for a city that shows how to navigate by foot to encourage pedestrian transportation.</p>
+            </div>
+          </div>
+
+          <div class="row g-0 visual">
+            <div class="col-12 col-md-6">
+                <img src="images/Providence_Streets-01.png" class="mr-3 float-left header-image"/>
+            </div>
+            <div class="col-12 col-md-6 header-text">
+              <p>Created a conceptual plan convert downtown Providence "carfree" by analyzing initiatives of this nature already existing within the city and around the world.</p>
+              <p>This map shows the proposal for the reallocation of traffic types permitted on each street within downtown Providence.</p>
+            </div>
+          </div>
+
+          <div class="row g-0 visual">
+            <div class="col-12 col-md-6">
+                <img src="images/IAPA_logo_lettermark.png" class="mr-3 float-left iapa bottom-visual"/>
+            </div>
+            <div class="col-12 col-md-6 header-text">
+              <p>Offical logo for the International and Public Affairs (IAPA) Departmental Undergraduate Group within the Watson Institute at Brown University.</p>
+            </div>
+          </div>
+      </div>
     </main>
   </body>
 </html>
