--- a/coding.html
+++ b/coding.html
@@ -28,12 +28,67 @@
         <div class="container">
             <h1>Code Projects</h1>
 
-            <p>...</p>
+            <h5>Distributed Search Engine | <em>NodeJs, AWS</em> | <a target="_blank" href="https://drive.google.com/file/d/1MFFw1YLeM0UYlFE-TtyBfXofljPef0kW/view?usp=sharing">Paper</a></h5>
+            <ul>
+              <li>Built a MapReduce distributed execution engine from scratch, then built a search engine on top of this</li>
+              <li>Search engine for the Project Gutenberg library with a sharded database to rapidly handle queries; deployed on AWS EC2 nodes</li>
+            </ul>
 
-            <h3>Open Source Contributions</h3>
-            <p>Folktables</p>
-            <p>Serato Scrobbler</p>
-            <p>Google Pix</p>
+            <h5>An Introduction to Quantum Computing | <em>Python, Qiskit</em> | <a target="_blank" href="https://drive.google.com/file/d/133497IIniO4rrsxoizD9gzUPon1xj0h8/view?usp=sharing">Paper</a> | <a target="_blank" href="https://colab.research.google.com/drive/1pjp4IYr9yRQqdHSF53U3fJIaZzqBvpro?usp=sharing">Code</a></h5>
+            <ul>
+              <li>An exploration of quantum computing that teaches the reader the basics, including requisite linear algebra and quantum mechanics</li>
+              <li>Implements Grover's algorithm for unstructured search and deploys the code on IBM's quantum computers through their API</li>
+            </ul>
+
+            <h5>TCP/IP | <em>Go</em></h5>
+            <ul>
+              <li>Implemented the Internet Protocol (IP) and Routing Information Protocol (RIP) to send packets between virtual hosts (processes running in the terminal) and accurately update routing tables with network topology changes</li>
+              <li>Built the Transmission Control Protocol (TCP) stack from scratch—including the handshake, state diagram, and ability to work over lossy networks—on top of my IP stack</li>
+            </ul>
+
+            <h5>Binarized Neural Networks | <em>TensorFlow, TFLite, Larq</em> | <a target="_blank" href="/images/bnn_poster.jpg">Poster</a> | <a target="_blank" href="https://colab.research.google.com/drive/134v2cLDpJmyAAC5no365x9ibZGZXgEDn?usp=sharing">Code</a></h5>
+            <ul>
+              <li>Reimplemented <em>Binarized Neural Networks: Training Deep Neural Networks with Weights and Activations Constrained to +1 or -1</em> (Courbariaux et al. 2016) by converting CNNs to Binarized Neural Networks to reduce serialization size by ~88% without loss of performance</li>
+            </ul>
+
+            <h5>Fantasy Twitter | <em>Python, Firebase, React</em></h5>
+            <ul>
+              <li>Fantasy-football-like game that utilized the (old) Twitter API to run an asynchronous multiplayer game online with user accounts and web deployment both managed through Firebase</li>
+              <li>Frontend in React with Python scripts that query the Twitter API in batches to send scoring info to a Firebase Realtime Database</li>
+              <li>Developed with a team of other students using agile methodology</li>
+            </ul>
+
+            <h5>Charcuterie Club Website | <a target="_blank" href="https://github.com/N-Masi/charcuterie">Code</a> | <a target="_blank" href="https://charcuterie-club.web.app/">Website</a></h5>
+            <ul>
+              <li>Official website for Brown University's Charcuterie Club</li>
+            </ul>
+
+            <h5>TI-Nspire Programs | <em>TI-Basic</em> | <a href="calc_scripts/index.html">Website</a> </h5>
+            <ul>
+              <li>Calculator programs for the TI-Nspire calculator to assist with statistics, geometry, and physics</li>
+            </ul>
+
+            <h2 style="margin-top: 40px;">Open Source Contributions</h2>
+            
+            <h5>Folktables | <a target="_blank" href="https://github.com/socialfoundations/folktables">Repo</a></h5>
+            <ul>
+              <li>Popular open source library for measuring fairness in machine learning models by making available US demographic data</li>
+              <li>Added a <a target="_blank" href="https://github.com/socialfoundations/folktables/pull/40">new data source</a> (Current Population Survey) that extends the package to include economic data</li> 
+              <li>Addressed a <a target="_blank" href="https://github.com/socialfoundations/folktables/issues/39">core bug</a> that affects how the package preprocesses data</li>
+            </ul>
+
+            <h5>SSLScrobbler | <a target="_blank" href="https://github.com/ben-xo/sslscrobbler">Repo</a></h5>
+            <ul>
+              <li>Scrobbler for Serato DJ</li>
+              <li>Added functionality that allows the scrobbled data to be piped into new internet broadcasting tools</li>
+            </ul>
+
+            <h5>google-photos-exif | <a target="_blank" href="https://github.com/mattwilson1024/google-photos-exif">Repo</a></h5>
+            <ul>
+              <li>Tool for preserving metadata when migrating photos out of Google Photos</li>
+              <li>Added missing <a target="_blank" href="https://github.com/mattwilson1024/google-photos-exif/pull/33">documentation</a> on how to use the tool when the volume of the Google Photos library exceeded a certain size</li>
+            </ul>
+
         </div>
     </main>
   </body>
