--- a/visual.html
+++ b/visual.html
@@ -50,7 +50,7 @@
 
           <div class="row g-0 visual">
             <div class="col-12 col-md-6">
-                <img src="images/IAPA_logo_lettermark.png" class="mr-3 float-left iapa bottom-visual"/>
+                <img src="images/IAPA_logo_lettermark.png" class="mr-3 float-left bottom-visual"/>
             </div>
             <div class="col-12 col-md-6 header-text">
               <p>Offical logo for the International and Public Affairs (IAPA) Departmental Undergraduate Group within the Watson Institute at Brown University.</p>
