--- a/writing.html
+++ b/writing.html
@@ -27,10 +27,17 @@
     <main class="flex-shrink-0" role="main">
         <div class="container">
             <h1>Writing Projects</h1>
-            <p>Adaptable Artificial Intelligence</p>
-            <p>GPU Export Controls</p>
-            <p>Municipal Broadband</p>
-            <p>WBRU Album Review: RIP Human Art</p>
+            <p class="writing">Azish Filabi, <b>Nick Masi</b>, Ellie Pavlick, Rico Picone. <em>Adaptable Artificial Intelligence</em>. Submitted for publication, 2024.</p>
+            <p class="writing">GPU Export Controls: Background and Recommendations | <a target="_blank" href="https://drive.google.com/file/d/1mHOJOiA9Ae6HR4YCwux85K4JO8yqU4MI/view?usp=sharing">Paper</a></p>
+            <ul class="writing-list">
+              <li>Abstract: This paper investigates the Biden administration’s policies on export controls targeted towards graphical processing units (GPUs) and other integrated circuits (ICs). GPUs are a critical hardware component in artificial intelligence (AI). It is found that the unilateral export control regime faces numerous
+              existential challenges, and worse yet may aggravate Chinese military threats over Taiwan. It is recommended that the administration drop this facet of its foreign policy.</li>
+            </ul>
+            <p class="writing">Municipal Broadband</p>
+            <p class="writing">WBRU Album Review: RIP Human Art</p>
+            <ul class="writing-list">
+              <li>Literary review of EARTHGANG and Spillage Village's EP RIP Human Art</li>
+            </ul>
         </div>
     </main>
   </body>
