link wbru website

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <p class="card-text">
                                 <ul>
                                     <li>Created processes for DJs to transmit song metadata while live on air to comply with FCC regulations</li>
-                                    <li>Develop and maintain website</li>
+                                    <li>Develop and maintain <a target="_blank" href="https://www.wbru.com/">website</a></li>
                                 </ul>
                             </p>
                             <p class="card-text"><small class="text-muted">September 2023 — Present</small></p>
