feat: experience icons

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
                 <h3 class="mb-4">Experience</h3>
                 <ul class="timeline">
                     <li class="timeline-item">
-                        <div class="timeline-item-content">
-                            <h5>Teaching Assistant, Computational Linguistics (CS 1460)</h5>
+                        <div class="timeline-item-content timeline-ta">
+                            <h5><i class="bi bi-pencil-fill" style="color: green;"></i>
+                                Teaching Assistant, Computational Linguistics (CS 1460)</h5>
                             <h6>Department of Computer Science, Brown University</h6>
                             <p>
                                 <ul>
@@ -69,8 +70,9 @@
                         </div>
                     </li>
                     <li class="timeline-item">
-                        <div class="timeline-item-content">
-                            <h5>Software Engineer Intern</h5>
+                        <div class="timeline-item-content  timeline-swe">
+                            <h5><i class="bi bi-terminal-fill" style="color: orange;"></i>
+                                Software Engineer Intern</h5>
                             <h6>MathWorks</h6>
                             <p>
                                 <ul>
@@ -82,8 +84,9 @@
                         </div>
                     </li>
                     <li class="timeline-item">
-                        <div class="timeline-item-content">
-                            <h5>Teaching Assistant, Fairness in Automated Decision Making (CS 1951Z)</h5>
+                        <div class="timeline-item-content timeline-ta">
+                            <h5><i class="bi bi-pencil-fill" style="color: green;"></i>
+                                Teaching Assistant, Fairness in Automated Decision Making (CS 1951Z)</h5>
                             <h6>Department of Computer Science, Brown University</h6>
                             <p>
                                 <ul>
@@ -94,8 +97,9 @@
                         </div>
                     </li>
                     <li class="timeline-item">
-                        <div class="timeline-item-content">
-                            <h5>Teaching Assistant, Computational Linguistics (CS 1460)</h5>
+                        <div class="timeline-item-content timeline-ta">
+                            <h5><i class="bi bi-pencil-fill" style="color: green;"></i>
+                                Teaching Assistant, Computational Linguistics (CS 1460)</h5>
                             <h6>Department of Computer Science, Brown University</h6>
                             <p>
                                 <ul>
@@ -107,8 +111,9 @@
                         </div>
                     </li>
                     <li class="timeline-item">
-                        <div class="timeline-item-content">
-                            <h5>Software Engineer Intern</h5>
+                        <div class="timeline-item-content timeline-swe">
+                            <h5><i class="bi bi-terminal-fill" style="color: orange;"></i>
+                                Software Engineer Intern</h5>
                             <h6>MathWorks</h6>
                             <p>
                                 <ul>
@@ -120,8 +125,9 @@
                         </div>
                     </li>
                     <li class="timeline-item">
-                        <div class="timeline-item-content">
-                            <h5>Research Analyst Intern</h5>
+                        <div class="timeline-item-content timeline-research">
+                            <h5><i class="bi bi-lightbulb-fill" style="color: blueviolet;"></i>
+                                Research Analyst Intern</h5>
                             <h6>Emerging Technologies Institute</h6>
                             <p>
                                 <ul>
@@ -133,8 +139,9 @@
                         </div>
                     </li>
                     <li class="timeline-item">
-                        <div class="timeline-item-content">
-                            <h5>Software Engineer Intern</h5>
+                        <div class="timeline-item-content timeline-swe">
+                            <h5><i class="bi bi-terminal-fill" style="color: orange;"></i>
+                                Software Engineer Intern</h5>
                             <h6>MathWorks</h6>
                             <p>
                                 <ul>
@@ -146,8 +153,9 @@
                         </div>
                     </li>
                     <li class="timeline-item">
-                        <div class="timeline-item-content">
-                            <h5>Senior Fellow Liaison</h5>
+                        <div class="timeline-item-content timeline-liaison">
+                            <h5><i class="bi bi-briefcase-fill" style="color: red;"></i>
+                                Senior Fellow Liaison</h5>
                             <h6>Watson Institute for International and Public Affairs, Brown University</h6>
                             <p>
                                 <ul>
