add: CLPS & school finance

--- a/coding.html
+++ b/coding.html
@@ -39,16 +39,26 @@
               <li>An exploration of quantum computing that teaches the reader the basics, including requisite linear algebra and quantum mechanics</li>
               <li>Implements Grover's algorithm for unstructured search and deploys the code on IBM's quantum computers through their API</li>
             </ul>
-
+            
+            <h5>Song Reconstruction from Neural Data with Deep Learning | <em>PyTorch</em> | <a target="_blank" href="CLPS Final Project.pdf">Paper</a></h5>
+            <ul>
+              <li>Reimplemented <em>Brain2Music: Reconstructing Music from Human Brain Activity</em> (Denk et al. 2023) which applies MusicLM—a model combining MuLan (a contrastive multimodal audio-text embedder), w2v-BERT, and SoundStream (an audio autoencoder)—to fMRI data so that songs listened to by test subjects can be reconstructed from their neural data while listening</li>
+            </ul>
+            
             <h5>TCP/IP | <em>Go</em></h5>
             <ul>
               <li>Implemented the Internet Protocol (IP) and Routing Information Protocol (RIP) to send packets between virtual hosts (processes running in the terminal) and accurately update routing tables with network topology changes</li>
               <li>Built the Transmission Control Protocol (TCP) stack from scratch—including the handshake, state diagram, and ability to work over lossy networks—on top of my IP stack</li>
             </ul>
 
-            <h5>Binarized Neural Networks | <em>TensorFlow, TFLite, Larq</em> | <a target="_blank" href="/images/bnn_poster.jpg">Poster</a> | <a target="_blank" href="https://colab.research.google.com/drive/134v2cLDpJmyAAC5no365x9ibZGZXgEDn?usp=sharing">Code</a></h5>
+            <h5>Binarized Neural Networks | <em>TensorFlow, TFLite, Larq</em> | <a target="_blank" href="images/bnn_poster.jpg">Poster</a> | <a target="_blank" href="https://colab.research.google.com/drive/134v2cLDpJmyAAC5no365x9ibZGZXgEDn?usp=sharing">Code</a></h5>
             <ul>
               <li>Reimplemented <em>Binarized Neural Networks: Training Deep Neural Networks with Weights and Activations Constrained to +1 or -1</em> (Courbariaux et al. 2016) by converting CNNs to Binarized Neural Networks to reduce serialization size by ~88% without loss of performance</li>
+            </ul>
+
+            <h5>US School Finance Dataset | <em>Python</em> | <a target="_blank" href="https://github.com/N-Masi/us_education_finance">Repo</a></h5>
+            <ul>
+              <li>Created the first electronically-available dataset on public school finances (amounts and sources) for California, Texas, and the United States as a whole</li>
             </ul>
 
             <h5>Fantasy Twitter | <em>Python, Firebase, React</em></h5>
