--- a/index.html
+++ b/index.html
@@ -153,6 +153,19 @@
                         </div>
                     </li>
                     <li class="timeline-item">
+                        <div class="timeline-item-content timeline-research">
+                            <h5><i class="bi bi-lightbulb-fill" style="color: blueviolet;"></i>
+                                Research Assistant</h5>
+                            <h6>Serre Lab, Brown University</h6>
+                            <p>
+                                <ul>
+                                    <li>Researcher and developer investigating deep neural networks with neuroscientific motivation; focus on multimodal models (e.g., CLIP)</li>
+                                </ul>
+                            </p>
+                            <p><small class="text-muted">January 2022 — May 2023</small></p>
+                        </div>
+                    </li>
+                    <li class="timeline-item">
                         <div class="timeline-item-content timeline-liaison">
                             <h5><i class="bi bi-briefcase-fill" style="color: red;"></i>
                                 Senior Fellow Liaison</h5>
@@ -191,7 +204,7 @@
                     <div class="card work-experience-card">
                         <div class="card-body">
                             <h5 class="card-title">President</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">Charcuterie Club</h6>
+                            <h6 class="card-subtitle mb-2 text-muted">Charcuterie Club, Brown University</h6>
                             <p class="card-text">
                                 <ul>
                                     <li>Run & plan meetings; organize club logistics</li>
