feat: copyright notice

--- a/coding.html
+++ b/coding.html
@@ -102,4 +102,7 @@
         </div>
     </main>
   </body>
+  <footer class="border-top">
+    <p class="text-muted text-center">© 2024 Nick Masi</p>
+  </footer>
 </html>
