--- a/writing.html
+++ b/writing.html
@@ -41,4 +41,7 @@
         </div>
     </main>
   </body>
+  <footer class="border-top">
+    <p class="text-muted text-center">© 2024 Nick Masi</p>
+  </footer>
 </html>
