--- a/index.html
+++ b/index.html
@@ -247,4 +247,7 @@
         </div>
     </main>
   </body>
+  <footer class="border-top">
+    <p class="text-muted text-center">© 2024 Nick Masi</p>
+  </footer>
 </html>
