--- a/coding.html
+++ b/coding.html
@@ -61,6 +61,12 @@
               <li>Created the first electronically-available dataset on public school finances (amounts and sources) for California, Texas, and the United States as a whole</li>
             </ul>
 
+            <h5>Spotify Scraper | <em>Python, Selenium</em> | <a target="_blank" href="https://github.com/N-Masi/wbru_playcounts">Repo</a></h5>
+            <ul>
+              <li>Scraper to gather the number of plays for songs on Spotify</li>
+              <li>Developed in my capacity as WBRU Technical Director to assist the Indie Music branch</li>
+            </ul>
+
             <h5>Fantasy Twitter | <em>Python, Firebase, React</em></h5>
             <ul>
               <li>Fantasy-football-like game that utilized the (old) Twitter API to run an asynchronous multiplayer game online with user accounts and web deployment both managed through Firebase</li>
