--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <div class="col-md-4">
                     <div class="card work-experience-card">
                         <div class="card-body">
-                            <h5 class="card-title">Tech Coordinator</h5>
+                            <h5 class="card-title">Technical Director</h5>
                             <h6 class="card-subtitle mb-2 text-muted">WBRU (Brown University Radio Station)</h6>
                             <p class="card-text">
                                 <ul>
