--- a/coding.html
+++ b/coding.html
@@ -28,6 +28,12 @@
         <div class="container">
             <h1>Code Projects</h1>
 
+            <h5>Climate Modeling with Spherical Fourier Neural Operators for Stratospheric
+Aerosol Injections | <em>PyTorch</em> | <a target="_blank" href="papers/sai_ssl_2952X.pdf">Paper</a></h5>
+            <ul>
+              <li>Abstract: We develop a Spherical Fourier Neural Operator (SFNO) emulator for stratospheric aerosol injection (SAI) scenarios, leveraging the ARISE-SAI-1.5 dataset. By incorporating stratospheric aerosol optical depth as a forcing variable, our model captures key climate responses to SAI while maintaining long-term stability. We then show that predictions can be improved by pretraining the SFNO encoder on masked image modeling of climate data as a pretext task. These results indicate that SFNO-based emulators can effectively approximate computationally expensive climate simulations for geoengineering analyses.</li>
+            </ul>
+
             <h5>Distributed Search Engine | <em>NodeJs, AWS</em> | <a target="_blank" href="https://drive.google.com/file/d/1MFFw1YLeM0UYlFE-TtyBfXofljPef0kW/view?usp=sharing">Paper</a></h5>
             <ul>
               <li>Built a MapReduce distributed execution engine from scratch, then built a search engine on top of this</li>
@@ -40,7 +46,7 @@
               <li>Implements Grover's algorithm for unstructured search and deploys the code on IBM's quantum computers through their API</li>
             </ul>
             
-            <h5>Song Reconstruction from Neural Data with Deep Learning | <em>PyTorch</em> | <a target="_blank" href="CLPS Final Project.pdf">Paper</a></h5>
+            <h5>Song Reconstruction from Neural Data with Deep Learning | <em>PyTorch</em> | <a target="_blank" href="papers/CLPS Final Project.pdf">Paper</a></h5>
             <ul>
               <li>Reimplemented <em>Brain2Music: Reconstructing Music from Human Brain Activity</em> (Denk et al. 2023) which applies MusicLM—a model combining MuLan (a contrastive multimodal audio-text embedder), w2v-BERT, and SoundStream (an audio autoencoder)—to fMRI data so that songs listened to by test subjects can be reconstructed from their neural data while listening</li>
             </ul>
