--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
                 <ul class="timeline">
                     <li class="timeline-item">
                         <div class="timeline-item-content timeline-ta">
+                            <h5><i class="bi bi-lightbulb-fill" style="color: blueviolet;"></i>
+                                Paragon Policy Fellow</h5>
+                            <h6>Los Angeles City Council District 3</h6>
+                            <p>
+                                <ul>
+                                    <li>Wrote a guide for the district on how to comply with ADA Title II requirements for digital accessibility <a href="papers/CD3_Digital_Accessibility.pdf" target="_blank" style="color: inherit;"><i class="bi bi-file-earmark-text-fill"></i></a></li>
+                                </ul>
+                            </p>
+                            <p><small class="text-muted">September 2024 — January 2025</small></p>
+                        </div>
+                    </li>
+                    <li class="timeline-item">
+                        <div class="timeline-item-content timeline-ta">
                             <h5><i class="bi bi-pencil-fill" style="color: green;"></i>
                                 Teaching Assistant, Computational Linguistics (CS 1460)</h5>
                             <h6>Department of Computer Science, Brown University</h6>
@@ -66,7 +79,7 @@
                                     <li>Refine course assignments, grade assignments, and hold office hours</li>
                                 </ul>
                             </p>
-                            <p><small class="text-muted">August 2024 — Present</small></p>
+                            <p><small class="text-muted">August 2024 — December 2024</small></p>
                         </div>
                     </li>
                     <li class="timeline-item">
