--- a/coding.html
+++ b/coding.html
@@ -28,6 +28,13 @@
         <div class="container">
             <h1>Code Projects</h1>
 
+            <h5>Sprint Timer | <em>Embedded Python, PCB design</em> | <a target="_blank" href="sprint-timer/index.html">Product Website</a></h5>
+            <ul>
+              <li>Timer that allows athletes to get millisecond-precise times while running</li>
+              <li>Embedded programming that involves timing across a distributed system</li>
+              <li>Original circuitry and PCB design</li>
+            </ul>
+
             <h5>Climate Modeling with Spherical Fourier Neural Operators for Stratospheric
 Aerosol Injections | <em>PyTorch</em> | <a target="_blank" href="papers/sai_ssl_2952X.pdf">Paper</a></h5>
             <ul>
