feat: update images

--- a/sprint-timer/index.html
+++ b/sprint-timer/index.html
@@ -85,12 +85,16 @@
         <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <h3 class="text-white">Starting Race</h3>
-                    <img src="photos/starting_race.JPG" class="d-block w-100 rounded shadow" alt="Product 1">
+                    <h3 class="text-white">Starting Device</h3>
+                    <img src="photos/starter_on_track.JPG" class="d-block w-100 rounded shadow" alt="White box with an antenna placed at the starting line on an indoor track.">
+                </div>
+                <div class="carousel-item">
+                    <h3 class="text-white">Starting a Race</h3>
+                    <img src="photos/starting_race.JPG" class="d-block w-100 rounded shadow" alt="Sprinting athlete pressing the start botton on the starting device (white box).">
                 </div>
                 <div class="carousel-item">
                     <h3 class="text-white">Out the Blocks</h3>
-                    <img src="photos/leaving_blocks.JPG" class="d-block w-100 rounded shadow" alt="Product 2">
+                    <img src="photos/leaving_blocks.JPG" class="d-block w-100 rounded shadow" alt="Sprinting athlete leaving the blocks next to the starting device.">
                 </div>
                 <div class="carousel-item">
                     <h3 class="text-white">Crossing the Finish</h3>
